[package]
authors = ["Christian Visintin <christian.visintin1997@gmail.com>"]
categories = ["network-programming"]
description = "remotefs SMB client library"
documentation = "https://docs.rs/remotefs-smb"
edition = "2021"
homepage = "https://veeso.github.io/remotefs-rs-smb/"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["remotefs", "smb-client"]
license = "MIT"
name = "remotefs-smb"
readme = "README.md"
repository = "https://github.com/veeso/remotefs-rs-smb"
version = "0.1.0"

[dependencies]
chrono = "^0.4.19"
lazy_static = "^1.4.0"
log = "^0.4.14"
pavao = "^0.1.0"
remotefs = "^0.2.0"

[dev-dependencies]
env_logger = "^0.9.0"
pretty_assertions = "^1.0.0"
rand = "^0.8.4"
serial_test = "^0.5.1"
tempfile = "^3.2.0"

[features]
default = [ "find" ]
# misc
find = [ "remotefs/find" ]
no-log = [ "log/max_level_off" ]
# tests
with-containers = [ ]

[target."cfg(target_family = \"unix\")"]
[target."cfg(target_family = \"unix\")".dependencies]
users = "^0.11.0"
