[package]
authors = ["Christian Visintin <christian.visintin1997@gmail.com>"]
categories = ["network-programming"]
description = "remotefs SMB client library"
documentation = "https://docs.rs/remotefs-smb"
edition = "2021"
homepage = "https://veeso.github.io/remotefs-rs-smb/"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["remotefs", "smb-client", "smb", "smb2", "smb3"]
license = "MIT"
name = "remotefs-smb"
readme = "README.md"
repository = "https://github.com/veeso/remotefs-rs-smb"
version = "0.2.0"

[dependencies]
log = "^0.4.14"
remotefs = "^0.2.0"

[target."cfg(target_family = \"unix\")"]
[target."cfg(target_family = \"unix\")".dependencies]
libc = "^0.2"
pavao = "^0.2"

[target."cfg(target_family = \"windows\")"]
[target."cfg(target_family = \"windows\")".dependencies]
filetime = "^0.2"
windows-sys = { version ="^0.48", features = [ "Win32_NetworkManagement_WNet", "Win32_Foundation" ] }

[dev-dependencies]
anyhow = "^1"
argh = "^0.1.7"
env_logger = "^0.10"
pretty_assertions = "^1.0.0"
rand = "^0.8.4"
rpassword = "7.2"
serial_test = "^2.0"
tempfile = "^3.2.0"

[features]
default = [ "find" ]
# misc
find = [ "remotefs/find" ]
no-log = [ "log/max_level_off" ]
# tests
with-containers = [ ]

[[example]]
name = "tree"
path = "examples/tree.rs"
